--- a/webapps/ROOT/assets/translations/messages_de.xml
+++ b/webapps/ROOT/assets/translations/messages_de.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- LAST MODIFIED: 2023-03-08 -->
+<!-- LAST MODIFIED: 2024-05-27 -->
 
-<catalogue xml:lang="fr" xml:space="preserve">
+<catalogue xml:lang="de" xml:space="preserve">
     <message key="artifact">Artefakt</message>
     <message key="type">Objekttyp</message>
-    <message key="not-specified">Nicht angegeben</message><!-- ajouter d'autres façons d'indiquer cela -->
+    <message key="not-specified">Nicht angegeben</message>
     <message key="not-available">Nicht verfügbar</message>
     <message key="undetermined">Unbestimmt</message>
     <message key="not-applicable">Nicht zutreffend</message>
@@ -121,6 +121,6 @@
     <message key="arrow-left">&#x021D0; vor</message>
     <message key="arrow-right">nach &#x021D2;</message>
     <message key="inscription-index-seals">Siegel</message>
-    <message key="no.further-references">Keine weitere Literatur</message>
+    <message key="no-further-references">Keine weitere Literatur</message>
     <message key="personal-names">Vornamen</message>
 </catalogue>
